<!-- Copyright 2016 Diego Martos Buoro -->
<!--
 This file is part of QASP.

 QASP is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 QASP is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with QASP.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">QASP</string>
    <string name="estaçoes">Estacões</string>
    <string name="indice_local">Indice Local</string>
    <string name="op_es">Opções</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar">Atualizar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="feedtexto">A sua avaliação é importante não apenas do funcionamento do aplicativo, mas também para a manuntenção do sistema.</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="configura_es">Configurações</string>
    <string name="contato">Contato</string>
    <string name="sobre">Sobre</string>
    <string name="bom">Bom</string>
    <string name="ok">OK</string>
    <string name="ruim">Ruim</string>
    <string name="avalia_o">Avaliação</string>
    <string name="motivos">Motivos</string>
    <string name="descri_o">Descrição</string>
    <string name="enviar">Enviar</string>
</resources>
