<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2016 Diego Martos Buoro -->
<!--
 This file is part of QASP.

 QASP is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 QASP is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with QASP.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context="com.qasp.diego.arsp.homeFrag"
    style="@style/MargemDef">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radio_avaliacao"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <RadioButton android:id="@+id/radiobom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bom"
            android:textSize="20sp" />
        <RadioButton android:id="@+id/radiook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruim"
            android:id="@+id/radioruim"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avalia_o"
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedtexto"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/motivos"
        android:id="@+id/textView5"
        android:gravity="center"
        android:layout_below="@+id/radio_avaliacao"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="text|textMultiLine|textCapSentences"
            android:hint="@string/descri_o"
            android:maxLength="200"
            android:maxLines="6"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:scrollHorizontally="false"
            android:layout_centerHorizontal="true" />
    </ScrollView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:id="@+id/benviar"
        android:layout_below="@+id/scrollView"
        android:layout_alignRight="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView" />



</RelativeLayout>
